fixed mobile nav menu with dark mode

--- a/style/style.css
+++ b/style/style.css
@@ -47,7 +47,6 @@ button {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  /* width: 75em; */
   min-width: 100%;
   padding: 0 1em;
   margin: 0 auto;
@@ -70,9 +69,11 @@ button {
 }
 
 .burger_menu {
-  padding: .1em;
+  position: relative;
+  padding: 0.1em;
   background-color: var(--dm-wcolor);
-  border-radius: .5em;
+  border: 1px solid var(--dm-bcolor);
+  border-radius: 0.5em;
   margin-left: 1.5em;
 }
 
@@ -92,9 +93,9 @@ button {
   align-items: center;
 }
 
-.list_wrapper li:not(:first-child) {
+/* .list_wrapper li:not(:first-child) {
   margin-left: 2em;
-}
+} */
 
 .list_wrapper a {
   position: relative;
@@ -108,6 +109,10 @@ button {
   color: var(--accent);
   cursor: pointer;
   transition: 0.3s ease;
+}
+
+.mobile_dmode {
+  display: none;
 }
 
 article {
@@ -202,7 +207,8 @@ article .body_text {
   color: var(--laccent);
 }
 
-.switch {
+.switch,
+.mobileToggle {
   position: relative;
   display: inline-block;
   width: 60px;
@@ -210,7 +216,8 @@ article .body_text {
   display: none;
 }
 
-.switch input {
+.switch input,
+.mobileToggle input {
   opacity: 0;
   width: 0;
   height: 0;
@@ -268,24 +275,15 @@ input:checked + .slider:before {
 
 body.dark_mode {
   background-color: var(--dm-wcolor);
-  transition: background-color 0.3s ease-in;
+  transition: background-color 0.3s;
 }
 
-body.dark_mode a {
-  color: var(--dm-bcolor);
-  transition: color 0.3s ease-in;
-}
-
-body.dark_mode h1 {
-  color: var(--dm-bcolor);
-}
-
-body.dark_mode h2 {
-  color: var(--dm-bcolor);
-}
-
+body.dark_mode a,
+body.dark_mode h1,
+body.dark_mode h2,
 body.dark_mode p {
   color: var(--dm-bcolor);
+  transition: color 0.3s;
 }
 
 body.dark_mode .logo_img {
@@ -296,31 +294,65 @@ body.dark_mode .logo_img {
 
 body.dark_mode .author-info {
   color: var(--dm-bcolor);
+  transition: color 0.3s;
 }
 
 body.dark_mode .author-info a {
   color: var(--accent);
+  transition: color 0.3s;
 }
 
 body.dark_mode .demo_link {
   cursor: pointer;
-  transition: 0.3s ease;
   color: var(--accent);
   border-bottom: 2px solid var(--accent);
+  transition: color 0.3s;
 }
 
 body.dark_mode .demo_link:hover {
   color: var(--laccent);
   border-bottom: 2px solid var(--accent);
+  transition: color 0.3s;
+}
+
+/* mobile navbar */
+@media (320px <= width <= 480px) {
+  header {
+    background-color: red;
+  }
+  .navbar {
+    display: initial;
+    position: absolute;
+    top: 12%;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+    height: 50%;
+    transform: translateX(-50%, -50%);
+    background-color: var(--dm-bcolor);
+  }
+
+  .night_mode {
+    display: initial;
+  }
+
+  .list_wrapper {
+    flex-direction: column;
+    /* align-items: center; */
+    height: 100%;
+  }
+
+  .mobileToggle {
+    display: initial;
+  }
 }
 
 /* smart phones (landscape) */
 @media screen and (min-width: 576px) {
-  
   .nav_wrapper {
     padding: 0 2em;
   }
-  
+
   article {
     display: flex;
     flex-direction: column-reverse;
@@ -353,17 +385,32 @@ body.dark_mode .demo_link:hover {
 
 /* Tablets (portrait), small laptops*/
 @media screen and (min-width: 768px) and (max-width: 1023px) {
-  /* .nav_wrapper {
-    background: green;
-  } */
-
-  article {
-    display: flex;
-    flex-direction: column-reverse;
-  }
-
   .navbar {
     display: initial;
+  }
+
+  .list_wrapper li:not(:first-child) {
+    margin-left: 2em;
+  }
+
+  .links {
+    position: relative;
+    cursor: pointer;
+  }
+
+  .links::after {
+    position: absolute;
+    content: "";
+    width: 100%;
+    height: 0.1em;
+    margin-top: 1.5em;
+    transform: scale(0);
+    background-color: var(--accent);
+    transition: transform 0.3s;
+  }
+
+  .links:hover:after {
+    transform: scale(1);
   }
 
   .burger_menu {
@@ -391,6 +438,30 @@ body.dark_mode .demo_link:hover {
     width: 75%;
     padding: 0 2em 0;
     margin: 0 auto;
+  }
+
+  .list_wrapper li:not(:first-child) {
+    margin-left: 2em;
+  }
+
+  .links {
+    position: relative;
+    cursor: pointer;
+  }
+
+  .links::after {
+    position: absolute;
+    content: "";
+    width: 100%;
+    height: 0.1em;
+    margin-top: 1.5em;
+    transform: scale(0);
+    background-color: var(--accent);
+    transition: transform 0.3s;
+  }
+
+  .links:hover:after {
+    transform: scale(1);
   }
 
   .nav_wrapper {
